--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "prisma": "^6.3.1",
     "sass": "^1.84.0",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
